set(
	SANGUIS_SERVER_FILES
	include/sanguis/server/add_sight_callback.hpp
	include/sanguis/server/add_target_callback.hpp
	include/sanguis/server/add_weapon_pickup_callback.hpp
	include/sanguis/server/ai/angle_to_target.hpp
	include/sanguis/server/ai/base.hpp
	include/sanguis/server/ai/base_fwd.hpp
	include/sanguis/server/ai/create_friend.hpp
	include/sanguis/server/ai/create_function.hpp
	include/sanguis/server/ai/create_simple.hpp
	include/sanguis/server/ai/create_swarm.hpp
	include/sanguis/server/ai/entity_set.hpp
	include/sanguis/server/ai/friend.hpp
	include/sanguis/server/ai/idle.hpp
	include/sanguis/server/ai/is_patrolling.hpp
	include/sanguis/server/ai/manager.hpp
	include/sanguis/server/ai/manager_fwd.hpp
	include/sanguis/server/ai/move_to_target.hpp
	include/sanguis/server/ai/optional_target.hpp
	include/sanguis/server/ai/optional_target_fwd.hpp
	include/sanguis/server/ai/pathing/can_walk_diagonally.hpp
	include/sanguis/server/ai/pathing/find_target.hpp
	include/sanguis/server/ai/pathing/is_visible.hpp
	include/sanguis/server/ai/pathing/positions_are_close.hpp
	include/sanguis/server/ai/pathing/start.hpp
	include/sanguis/server/ai/pathing/start_fwd.hpp
	include/sanguis/server/ai/pathing/target.hpp
	include/sanguis/server/ai/pathing/target_fwd.hpp
	include/sanguis/server/ai/pathing/trail.hpp
	include/sanguis/server/ai/rotate_and_move_to_target.hpp
	include/sanguis/server/ai/rotate_to.hpp
	include/sanguis/server/ai/rotate_to_target.hpp
	include/sanguis/server/ai/search_new_target.hpp
	include/sanguis/server/ai/sight_range.hpp
	include/sanguis/server/ai/sight_range_fwd.hpp
	include/sanguis/server/ai/simple.hpp
	include/sanguis/server/ai/stop.hpp
	include/sanguis/server/ai/swarm.hpp
	include/sanguis/server/ai/target.hpp
	include/sanguis/server/ai/target_fwd.hpp
	include/sanguis/server/ai/unique_ptr.hpp
	include/sanguis/server/ai/update_interval.hpp
	include/sanguis/server/ai/update_result.hpp
	include/sanguis/server/ai/update_result_fwd.hpp
	include/sanguis/server/ai/visible.hpp
	include/sanguis/server/ai/visible_fwd.hpp
	include/sanguis/server/angle.hpp
	include/sanguis/server/angle_fwd.hpp
	include/sanguis/server/aoe.hpp
	include/sanguis/server/aoe_fwd.hpp
	include/sanguis/server/auras/aoe_damage.hpp
	include/sanguis/server/auras/aura.hpp
	include/sanguis/server/auras/aura_fwd.hpp
	include/sanguis/server/auras/buff.hpp
	include/sanguis/server/auras/burn_create.hpp
	include/sanguis/server/auras/collision_groups.hpp
	include/sanguis/server/auras/container.hpp
	include/sanguis/server/auras/create_callback.hpp
	include/sanguis/server/auras/create_callback_container.hpp
	include/sanguis/server/auras/influence.hpp
	include/sanguis/server/auras/influence_fwd.hpp
	include/sanguis/server/auras/slow_create.hpp
	include/sanguis/server/auras/target.hpp
	include/sanguis/server/auras/target_kind.hpp
	include/sanguis/server/auras/target_kind_fwd.hpp
	include/sanguis/server/auras/target_kind_to_influence.hpp
	include/sanguis/server/auras/unique_ptr.hpp
	include/sanguis/server/auras/update_sight.hpp
	include/sanguis/server/auras/weapon_pickup_candidates.hpp
	include/sanguis/server/auras/wrap_create.hpp
	include/sanguis/server/buffs/buff.hpp
	include/sanguis/server/buffs/buff_fwd.hpp
	include/sanguis/server/buffs/burn.hpp
	include/sanguis/server/buffs/burn_create.hpp
	include/sanguis/server/buffs/burn_interval.hpp
	include/sanguis/server/buffs/comparator.hpp
	include/sanguis/server/buffs/create_callback.hpp
	include/sanguis/server/buffs/define_special.hpp
	include/sanguis/server/buffs/provider.hpp
	include/sanguis/server/buffs/provider_fwd.hpp
	include/sanguis/server/buffs/slow.hpp
	include/sanguis/server/buffs/slow_create.hpp
	include/sanguis/server/buffs/slow_factor.hpp
	include/sanguis/server/buffs/unique_ptr.hpp
	include/sanguis/server/center.hpp
	include/sanguis/server/center_fwd.hpp
	include/sanguis/server/cheat/process.hpp
	include/sanguis/server/cheat/weapon_type.hpp
	include/sanguis/server/closest_entity.hpp
	include/sanguis/server/collision/body.hpp
	include/sanguis/server/collision/body_collision.hpp
	include/sanguis/server/collision/body_fwd.hpp
	include/sanguis/server/collision/distance_entity_entity.hpp
	include/sanguis/server/collision/distance_entity_pos.hpp
	include/sanguis/server/collision/distance_pos_pos.hpp
	include/sanguis/server/collision/ghost.hpp
	include/sanguis/server/collision/ghost_base.hpp
	include/sanguis/server/collision/ghost_fwd.hpp
	include/sanguis/server/collision/ghost_unique_ptr.hpp
	include/sanguis/server/collision/optional_result.hpp
	include/sanguis/server/collision/optional_result_fwd.hpp
	include/sanguis/server/collision/position_callback.hpp
	include/sanguis/server/collision/result.hpp
	include/sanguis/server/collision/result_fwd.hpp
	include/sanguis/server/collision/with_world.hpp
	include/sanguis/server/collision/with_world_move.hpp
	include/sanguis/server/console.hpp
	include/sanguis/server/console_command_pair.hpp
	include/sanguis/server/console_command_pair_fwd.hpp
	include/sanguis/server/console_command_vector.hpp
	include/sanguis/server/console_fwd.hpp
	include/sanguis/server/create.hpp
	include/sanguis/server/create_player.hpp
	include/sanguis/server/create_player.hpp.hpp
	include/sanguis/server/damage/armor_array.hpp
	include/sanguis/server/damage/armor_array_fwd.hpp
	include/sanguis/server/damage/armor_list.hpp
	include/sanguis/server/damage/armor_list_fwd.hpp
	include/sanguis/server/damage/armor_meta.hpp
	include/sanguis/server/damage/armor_meta_fwd.hpp
	include/sanguis/server/damage/armor_unit.hpp
	include/sanguis/server/damage/armor_unit_fwd.hpp
	include/sanguis/server/damage/array.hpp
	include/sanguis/server/damage/array_fwd.hpp
	include/sanguis/server/damage/basic_array.hpp
	include/sanguis/server/damage/basic_array_fwd.hpp
	include/sanguis/server/damage/basic_list_decl.hpp
	include/sanguis/server/damage/basic_list_fwd.hpp
	include/sanguis/server/damage/basic_list_impl.hpp
	include/sanguis/server/damage/basic_meta_decl.hpp
	include/sanguis/server/damage/basic_meta_fwd.hpp
	include/sanguis/server/damage/basic_meta_impl.hpp
	include/sanguis/server/damage/fire.hpp
	include/sanguis/server/damage/full.hpp
	include/sanguis/server/damage/ice.hpp
	include/sanguis/server/damage/list.hpp
	include/sanguis/server/damage/list_fwd.hpp
	include/sanguis/server/damage/meta.hpp
	include/sanguis/server/damage/meta_fwd.hpp
	include/sanguis/server/damage/no_armor.hpp
	include/sanguis/server/damage/normal.hpp
	include/sanguis/server/damage/piercing.hpp
	include/sanguis/server/damage/type.hpp
	include/sanguis/server/damage/type_fwd.hpp
	include/sanguis/server/damage/type_to_string.hpp
	include/sanguis/server/damage/unit.hpp
	include/sanguis/server/damage/unit_fwd.hpp
	include/sanguis/server/damage/wrapper.hpp
	include/sanguis/server/damage/wrapper_fwd.hpp
	include/sanguis/server/dest_world_id.hpp
	include/sanguis/server/dim.hpp
	include/sanguis/server/dim_fwd.hpp
	include/sanguis/server/direction.hpp
	include/sanguis/server/direction_fwd.hpp
	include/sanguis/server/dispatch.hpp
	include/sanguis/server/entities/auto_weak_hook.hpp
	include/sanguis/server/entities/auto_weak_link.hpp
	include/sanguis/server/entities/auto_weak_link_fwd.hpp
	include/sanguis/server/entities/base.hpp
	include/sanguis/server/entities/base_fwd.hpp
	include/sanguis/server/entities/center_ghost.hpp
	include/sanguis/server/entities/center_simple.hpp
	include/sanguis/server/entities/check_dim.hpp
	include/sanguis/server/entities/destructible.hpp
	include/sanguis/server/entities/enemies/attribute.hpp
	include/sanguis/server/entities/enemies/attribute_container.hpp
	include/sanguis/server/entities/enemies/attribute_fwd.hpp
	include/sanguis/server/entities/enemies/base_difficulty.hpp
	include/sanguis/server/entities/enemies/create.hpp
	include/sanguis/server/entities/enemies/difficulty.hpp
	include/sanguis/server/entities/enemies/difficulty_value.hpp
	include/sanguis/server/entities/enemies/enemy.hpp
	include/sanguis/server/entities/enemies/enemy_fwd.hpp
	include/sanguis/server/entities/enemies/factory/ghost.hpp
	include/sanguis/server/entities/enemies/factory/maggot.hpp
	include/sanguis/server/entities/enemies/factory/make.hpp
	include/sanguis/server/entities/enemies/factory/make_modifiers.hpp
	include/sanguis/server/entities/enemies/factory/make_skills.hpp
	include/sanguis/server/entities/enemies/factory/make_special.hpp
	include/sanguis/server/entities/enemies/factory/parameters.hpp
	include/sanguis/server/entities/enemies/factory/parameters_fwd.hpp
	include/sanguis/server/entities/enemies/factory/reaper.hpp
	include/sanguis/server/entities/enemies/factory/skeleton.hpp
	include/sanguis/server/entities/enemies/factory/spider.hpp
	include/sanguis/server/entities/enemies/factory/wolf.hpp
	include/sanguis/server/entities/enemies/factory/zombie00.hpp
	include/sanguis/server/entities/enemies/factory/zombie01.hpp
	include/sanguis/server/entities/enemies/finalize_special_parameters.hpp
	include/sanguis/server/entities/enemies/fwd.hpp
	include/sanguis/server/entities/enemies/make_name.hpp
	include/sanguis/server/entities/enemies/modifiers/agile.hpp
	include/sanguis/server/entities/enemies/modifiers/amount.hpp
	include/sanguis/server/entities/enemies/modifiers/apply.hpp
	include/sanguis/server/entities/enemies/modifiers/armored.hpp
	include/sanguis/server/entities/enemies/modifiers/burning.hpp
	include/sanguis/server/entities/enemies/modifiers/callback.hpp
	include/sanguis/server/entities/enemies/modifiers/container.hpp
	include/sanguis/server/entities/enemies/modifiers/create_callbacks.hpp
	include/sanguis/server/entities/enemies/modifiers/fast.hpp
	include/sanguis/server/entities/enemies/modifiers/freezing.hpp
	include/sanguis/server/entities/enemies/modifiers/health.hpp
	include/sanguis/server/entities/enemies/modifiers/parameters.hpp
	include/sanguis/server/entities/enemies/modifiers/parameters_fwd.hpp
	include/sanguis/server/entities/enemies/modifiers/regenerating.hpp
	include/sanguis/server/entities/enemies/parameters.hpp
	include/sanguis/server/entities/enemies/parameters_fwd.hpp
	include/sanguis/server/entities/enemies/skills/amount.hpp
	include/sanguis/server/entities/enemies/skills/container.hpp
	include/sanguis/server/entities/enemies/skills/cooldown.hpp
	include/sanguis/server/entities/enemies/skills/factory/callback.hpp
	include/sanguis/server/entities/enemies/skills/factory/container.hpp
	include/sanguis/server/entities/enemies/skills/factory/create_callbacks.hpp
	include/sanguis/server/entities/enemies/skills/factory/parameters.hpp
	include/sanguis/server/entities/enemies/skills/factory/parameters_fwd.hpp
	include/sanguis/server/entities/enemies/skills/factory/scatter.hpp
	include/sanguis/server/entities/enemies/skills/factory/teleport.hpp
	include/sanguis/server/entities/enemies/skills/scatter.hpp
	include/sanguis/server/entities/enemies/skills/skill.hpp
	include/sanguis/server/entities/enemies/skills/skill_fwd.hpp
	include/sanguis/server/entities/enemies/skills/teleport.hpp
	include/sanguis/server/entities/enemies/skills/unique_ptr.hpp
	include/sanguis/server/entities/enemies/special.hpp
	include/sanguis/server/entities/enemies/special_chance.hpp
	include/sanguis/server/entities/enemies/unique_ptr.hpp
	include/sanguis/server/entities/exp_area.hpp
	include/sanguis/server/entities/friend.hpp
	include/sanguis/server/entities/ifaces/with_angle.hpp
	include/sanguis/server/entities/ifaces/with_id.hpp
	include/sanguis/server/entities/ifaces/with_links.hpp
	include/sanguis/server/entities/ifaces/with_links_fwd.hpp
	include/sanguis/server/entities/ifaces/with_team.hpp
	include/sanguis/server/entities/ifaces/with_velocity.hpp
	include/sanguis/server/entities/insert_parameters.hpp
	include/sanguis/server/entities/insert_parameters_center.hpp
	include/sanguis/server/entities/insert_parameters_fwd.hpp
	include/sanguis/server/entities/insert_with_result.hpp
	include/sanguis/server/entities/is_type.hpp
	include/sanguis/server/entities/link_container.hpp
	include/sanguis/server/entities/movement_speed.hpp
	include/sanguis/server/entities/optional_base_ref.hpp
	include/sanguis/server/entities/optional_base_ref_fwd.hpp
	include/sanguis/server/entities/optional_player_ref.hpp
	include/sanguis/server/entities/optional_player_ref_fwd.hpp
	include/sanguis/server/entities/optional_with_ai_ref.hpp
	include/sanguis/server/entities/optional_with_ai_ref_fwd.hpp
	include/sanguis/server/entities/optional_with_weapon_ref.hpp
	include/sanguis/server/entities/optional_with_weapon_ref_fwd.hpp
	include/sanguis/server/entities/pickups/health.hpp
	include/sanguis/server/entities/pickups/monster.hpp
	include/sanguis/server/entities/pickups/pickup.hpp
	include/sanguis/server/entities/pickups/weapon.hpp
	include/sanguis/server/entities/pickups/weapon_fwd.hpp
	include/sanguis/server/entities/pickups/weapon_ref.hpp
	include/sanguis/server/entities/player.hpp
	include/sanguis/server/entities/player_fwd.hpp
	include/sanguis/server/entities/player_unique_ptr.hpp
	include/sanguis/server/entities/projectiles/aoe_damage.hpp
	include/sanguis/server/entities/projectiles/aoe_projectile.hpp
	include/sanguis/server/entities/projectiles/collision_groups.hpp
	include/sanguis/server/entities/projectiles/grenade.hpp
	include/sanguis/server/entities/projectiles/life_time.hpp
	include/sanguis/server/entities/projectiles/melee.hpp
	include/sanguis/server/entities/projectiles/projectile.hpp
	include/sanguis/server/entities/projectiles/rocket.hpp
	include/sanguis/server/entities/projectiles/scatter.hpp
	include/sanguis/server/entities/projectiles/scatter_create.hpp
	include/sanguis/server/entities/projectiles/simple_bullet.hpp
	include/sanguis/server/entities/property/add.hpp
	include/sanguis/server/entities/property/always_max.hpp
	include/sanguis/server/entities/property/always_max_fwd.hpp
	include/sanguis/server/entities/property/apply.hpp
	include/sanguis/server/entities/property/base.hpp
	include/sanguis/server/entities/property/base_fwd.hpp
	include/sanguis/server/entities/property/change_callback.hpp
	include/sanguis/server/entities/property/change_event.hpp
	include/sanguis/server/entities/property/change_event_fwd.hpp
	include/sanguis/server/entities/property/change_function.hpp
	include/sanguis/server/entities/property/change_signal.hpp
	include/sanguis/server/entities/property/changeable.hpp
	include/sanguis/server/entities/property/changeable_fwd.hpp
	include/sanguis/server/entities/property/constant.hpp
	include/sanguis/server/entities/property/constant_change.hpp
	include/sanguis/server/entities/property/constant_fwd.hpp
	include/sanguis/server/entities/property/current_to_max.hpp
	include/sanguis/server/entities/property/diff.hpp
	include/sanguis/server/entities/property/initial.hpp
	include/sanguis/server/entities/property/initial_fwd.hpp
	include/sanguis/server/entities/property/initial_max.hpp
	include/sanguis/server/entities/property/linear.hpp
	include/sanguis/server/entities/property/linear_change.hpp
	include/sanguis/server/entities/property/linear_decrease.hpp
	include/sanguis/server/entities/property/linear_decrease_fwd.hpp
	include/sanguis/server/entities/property/linear_decrease_op.hpp
	include/sanguis/server/entities/property/linear_fwd.hpp
	include/sanguis/server/entities/property/subtract.hpp
	include/sanguis/server/entities/property/value.hpp
	include/sanguis/server/entities/radius.hpp
	include/sanguis/server/entities/same_object.hpp
	include/sanguis/server/entities/spawn_owner.hpp
	include/sanguis/server/entities/spawn_owner_fwd.hpp
	include/sanguis/server/entities/spawns/count_per_wave.hpp
	include/sanguis/server/entities/spawns/interval.hpp
	include/sanguis/server/entities/spawns/limit.hpp
	include/sanguis/server/entities/spawns/limited.hpp
	include/sanguis/server/entities/spawns/size_type.hpp
	include/sanguis/server/entities/spawns/spawn.hpp
	include/sanguis/server/entities/spawns/total_count.hpp
	include/sanguis/server/entities/speed_to_abs.hpp
	include/sanguis/server/entities/transfer_parameters.hpp
	include/sanguis/server/entities/transfer_parameters_fwd.hpp
	include/sanguis/server/entities/unique_ptr.hpp
	include/sanguis/server/entities/with_ai.hpp
	include/sanguis/server/entities/with_ai_fwd.hpp
	include/sanguis/server/entities/with_ai_ref.hpp
	include/sanguis/server/entities/with_auras.hpp
	include/sanguis/server/entities/with_auras_id.hpp
	include/sanguis/server/entities/with_body.hpp
	include/sanguis/server/entities/with_body_fwd.hpp
	include/sanguis/server/entities/with_body_ref.hpp
	include/sanguis/server/entities/with_buffs.hpp
	include/sanguis/server/entities/with_buffs_fwd.hpp
	include/sanguis/server/entities/with_ghosts.hpp
	include/sanguis/server/entities/with_health.hpp
	include/sanguis/server/entities/with_health_fwd.hpp
	include/sanguis/server/entities/with_id.hpp
	include/sanguis/server/entities/with_id_fwd.hpp
	include/sanguis/server/entities/with_id_unique_ptr.hpp
	include/sanguis/server/entities/with_links.hpp
	include/sanguis/server/entities/with_links_fwd.hpp
	include/sanguis/server/entities/with_perks.hpp
	include/sanguis/server/entities/with_perks_fwd.hpp
	include/sanguis/server/entities/with_velocity.hpp
	include/sanguis/server/entities/with_velocity_fwd.hpp
	include/sanguis/server/entities/with_weapon.hpp
	include/sanguis/server/entities/with_weapon_fwd.hpp
	include/sanguis/server/environment/insert_no_result.hpp
	include/sanguis/server/environment/load_context.hpp
	include/sanguis/server/environment/load_context_fwd.hpp
	include/sanguis/server/environment/object.hpp
	include/sanguis/server/environment/object_fwd.hpp
	include/sanguis/server/environment/optional_object_ref.hpp
	include/sanguis/server/environment/optional_object_ref_fwd.hpp
	include/sanguis/server/events/disconnect.hpp
	include/sanguis/server/events/disconnect_fwd.hpp
	include/sanguis/server/events/message.hpp
	include/sanguis/server/events/message_fwd.hpp
	include/sanguis/server/events/tick.hpp
	include/sanguis/server/events/tick_fwd.hpp
	include/sanguis/server/exp.hpp
	include/sanguis/server/exp_for_level.hpp
	include/sanguis/server/exp_to_net.hpp
	include/sanguis/server/global/context.hpp
	include/sanguis/server/global/context_fwd.hpp
	include/sanguis/server/global/dest_world_pair.hpp
	include/sanguis/server/global/generate_worlds.hpp
	include/sanguis/server/global/load_context.hpp
	include/sanguis/server/global/next_id_callback.hpp
	include/sanguis/server/global/source_world_pair.hpp
	include/sanguis/server/global/world_connection_map.hpp
	include/sanguis/server/global/world_map.hpp
	include/sanguis/server/global/world_map_fwd.hpp
	include/sanguis/server/health.hpp
	include/sanguis/server/health_fwd.hpp
	include/sanguis/server/level.hpp
	include/sanguis/server/level_from_exp.hpp
	include/sanguis/server/load.hpp
	include/sanguis/server/load_fwd.hpp
	include/sanguis/server/log.hpp
	include/sanguis/server/log_location.hpp
	include/sanguis/server/machine.hpp
	include/sanguis/server/machine_fwd.hpp
	include/sanguis/server/make_send_callback.hpp
	include/sanguis/server/make_unicast_callback.hpp
	include/sanguis/server/message_functor.hpp
	include/sanguis/server/model_name.hpp
	include/sanguis/server/net/angle.hpp
	include/sanguis/server/net/angle_fwd.hpp
	include/sanguis/server/net/angle_policy.hpp
	include/sanguis/server/net/angle_policy_fwd.hpp
	include/sanguis/server/net/center.hpp
	include/sanguis/server/net/center_fwd.hpp
	include/sanguis/server/net/center_policy.hpp
	include/sanguis/server/net/center_policy_fwd.hpp
	include/sanguis/server/net/deserialize.hpp
	include/sanguis/server/net/health.hpp
	include/sanguis/server/net/health_fwd.hpp
	include/sanguis/server/net/health_policy.hpp
	include/sanguis/server/net/health_policy_fwd.hpp
	include/sanguis/server/net/serialize_to_circular_buffer.hpp
	include/sanguis/server/net/serialize_to_data_buffer.hpp
	include/sanguis/server/net/speed.hpp
	include/sanguis/server/net/speed_fwd.hpp
	include/sanguis/server/net/speed_policy.hpp
	include/sanguis/server/net/speed_policy_fwd.hpp
	include/sanguis/server/net/value_decl.hpp
	include/sanguis/server/net/value_fwd.hpp
	include/sanguis/server/net/value_impl.hpp
	include/sanguis/server/net_id_from_player.hpp
	include/sanguis/server/object.hpp
	include/sanguis/server/object_base.hpp
	include/sanguis/server/object_base_fwd.hpp
	include/sanguis/server/object_base_unique_ptr.hpp
	include/sanguis/server/object_fwd.hpp
	include/sanguis/server/optional_angle.hpp
	include/sanguis/server/optional_angle_fwd.hpp
	include/sanguis/server/perks/change_simple.hpp
	include/sanguis/server/perks/choleric.hpp
	include/sanguis/server/perks/create.hpp
	include/sanguis/server/perks/health.hpp
	include/sanguis/server/perks/ias.hpp
	include/sanguis/server/perks/ims.hpp
	include/sanguis/server/perks/irs.hpp
	include/sanguis/server/perks/level_diff.hpp
	include/sanguis/server/perks/perk.hpp
	include/sanguis/server/perks/perk_fwd.hpp
	include/sanguis/server/perks/tree/choosable.hpp
	include/sanguis/server/perks/tree/choose.hpp
	include/sanguis/server/perks/tree/create.hpp
	include/sanguis/server/perks/tree/equal.hpp
	include/sanguis/server/perks/tree/max_level.hpp
	include/sanguis/server/perks/tree/object.hpp
	include/sanguis/server/perks/tree/object_fwd.hpp
	include/sanguis/server/perks/tree/object_unique_ptr.hpp
	include/sanguis/server/perks/tree/optional_status.hpp
	include/sanguis/server/perks/tree/optional_status_fwd.hpp
	include/sanguis/server/perks/tree/required_parent_level.hpp
	include/sanguis/server/perks/tree/required_player_level.hpp
	include/sanguis/server/perks/tree/status.hpp
	include/sanguis/server/perks/tree/status_fwd.hpp
	include/sanguis/server/perks/unique_ptr.hpp
	include/sanguis/server/pickup_probability.hpp
	include/sanguis/server/player_id.hpp
	include/sanguis/server/player_id_from_args.hpp
	include/sanguis/server/player_id_from_net.hpp
	include/sanguis/server/player_id_fwd.hpp
	include/sanguis/server/radius.hpp
	include/sanguis/server/radius_fwd.hpp
	include/sanguis/server/random/amount.hpp
	include/sanguis/server/random/create_function.hpp
	include/sanguis/server/random/create_function_tag.hpp
	include/sanguis/server/random/distributor_decl.hpp
	include/sanguis/server/random/distributor_fwd.hpp
	include/sanguis/server/random/distributor_impl.hpp
	include/sanguis/server/random/draw.hpp
	include/sanguis/server/random/equal_function.hpp
	include/sanguis/server/random/equal_function_tag.hpp
	include/sanguis/server/random/less_function.hpp
	include/sanguis/server/random/less_function_tag.hpp
	include/sanguis/server/random/make_upper_bound.hpp
	include/sanguis/server/random/map_with_index.hpp
	include/sanguis/server/random/max.hpp
	include/sanguis/server/random/min.hpp
	include/sanguis/server/random/split.hpp
	include/sanguis/server/random/split_array.hpp
	include/sanguis/server/regeneration.hpp
	include/sanguis/server/regeneration_fwd.hpp
	include/sanguis/server/remove_sight_callback.hpp
	include/sanguis/server/remove_target_callback.hpp
	include/sanguis/server/remove_weapon_pickup_callback.hpp
	include/sanguis/server/send_available_perks.hpp
	include/sanguis/server/send_callback.hpp
	include/sanguis/server/skill_points.hpp
	include/sanguis/server/source_world_id.hpp
	include/sanguis/server/space_unit.hpp
	include/sanguis/server/speed.hpp
	include/sanguis/server/speed_fwd.hpp
	include/sanguis/server/states/log_location.hpp
	include/sanguis/server/states/paused.hpp
	include/sanguis/server/states/running.hpp
	include/sanguis/server/states/running_fwd.hpp
	include/sanguis/server/states/unpaused.hpp
	include/sanguis/server/states/unpaused_fwd.hpp
	include/sanguis/server/string.hpp
	include/sanguis/server/team.hpp
	include/sanguis/server/team_fwd.hpp
	include/sanguis/server/timer.hpp
	include/sanguis/server/timer_callback.hpp
	include/sanguis/server/timer_duration.hpp
	include/sanguis/server/timer_function.hpp
	include/sanguis/server/timer_fwd.hpp
	include/sanguis/server/timer_impl.hpp
	include/sanguis/server/timer_impl_fwd.hpp
	include/sanguis/server/to_console_arg_list.hpp
	include/sanguis/server/unicast_callback.hpp
	include/sanguis/server/unknown_player_exception.hpp
	include/sanguis/server/update_sight_callback.hpp
	include/sanguis/server/update_target_callback.hpp
	include/sanguis/server/update_weapon_pickup_callback.hpp
	include/sanguis/server/vector.hpp
	include/sanguis/server/vector_fwd.hpp
	include/sanguis/server/weapons/accuracy.hpp
	include/sanguis/server/weapons/aoe.hpp
	include/sanguis/server/weapons/attack_result.hpp
	include/sanguis/server/weapons/attack_result_fwd.hpp
	include/sanguis/server/weapons/attributes/accuracy.hpp
	include/sanguis/server/weapons/attributes/accuracy_fwd.hpp
	include/sanguis/server/weapons/attributes/aoe.hpp
	include/sanguis/server/weapons/attributes/aoe_fwd.hpp
	include/sanguis/server/weapons/attributes/basic_decl.hpp
	include/sanguis/server/weapons/attributes/basic_fwd.hpp
	include/sanguis/server/weapons/attributes/basic_impl.hpp
	include/sanguis/server/weapons/attributes/damage.hpp
	include/sanguis/server/weapons/attributes/damage_fwd.hpp
	include/sanguis/server/weapons/attributes/magazine_size.hpp
	include/sanguis/server/weapons/attributes/magazine_size_fwd.hpp
	include/sanguis/server/weapons/attributes/make.hpp
	include/sanguis/server/weapons/attributes/make_aoe.hpp
	include/sanguis/server/weapons/attributes/make_damage.hpp
	include/sanguis/server/weapons/attributes/optional_accuracy.hpp
	include/sanguis/server/weapons/attributes/optional_accuracy_fwd.hpp
	include/sanguis/server/weapons/attributes/optional_magazine_size.hpp
	include/sanguis/server/weapons/attributes/optional_magazine_size_fwd.hpp
	include/sanguis/server/weapons/attributes/spread_radius.hpp
	include/sanguis/server/weapons/attributes/spread_radius_fwd.hpp
	include/sanguis/server/weapons/backswing_time.hpp
	include/sanguis/server/weapons/base_cooldown.hpp
	include/sanguis/server/weapons/cast_point.hpp
	include/sanguis/server/weapons/const_optional_ref.hpp
	include/sanguis/server/weapons/const_optional_ref_fwd.hpp
	include/sanguis/server/weapons/create.hpp
	include/sanguis/server/weapons/create_function.hpp
	include/sanguis/server/weapons/damage.hpp
	include/sanguis/server/weapons/default_ias.hpp
	include/sanguis/server/weapons/default_irs.hpp
	include/sanguis/server/weapons/delayed_attack.hpp
	include/sanguis/server/weapons/delayed_attack_fwd.hpp
	include/sanguis/server/weapons/events/poll.hpp
	include/sanguis/server/weapons/events/poll_fwd.hpp
	include/sanguis/server/weapons/events/reload.hpp
	include/sanguis/server/weapons/events/reload_fwd.hpp
	include/sanguis/server/weapons/events/shoot.hpp
	include/sanguis/server/weapons/events/shoot_fwd.hpp
	include/sanguis/server/weapons/events/stop.hpp
	include/sanguis/server/weapons/events/stop_fwd.hpp
	include/sanguis/server/weapons/factory/dual_pistols.hpp
	include/sanguis/server/weapons/factory/grenade.hpp
	include/sanguis/server/weapons/factory/parameters.hpp
	include/sanguis/server/weapons/factory/parameters_fwd.hpp
	include/sanguis/server/weapons/factory/pistol.hpp
	include/sanguis/server/weapons/factory/primary.hpp
	include/sanguis/server/weapons/factory/rocket_launcher.hpp
	include/sanguis/server/weapons/factory/secondary.hpp
	include/sanguis/server/weapons/factory/sentry.hpp
	include/sanguis/server/weapons/factory/shotgun.hpp
	include/sanguis/server/weapons/factory/visitor.hpp
	include/sanguis/server/weapons/grenade.hpp
	include/sanguis/server/weapons/grenade_parameters.hpp
	include/sanguis/server/weapons/grenade_parameters_fwd.hpp
	include/sanguis/server/weapons/ias.hpp
	include/sanguis/server/weapons/insert_to_attack_result.hpp
	include/sanguis/server/weapons/irs.hpp
	include/sanguis/server/weapons/log.hpp
	include/sanguis/server/weapons/log_location.hpp
	include/sanguis/server/weapons/magazine_size.hpp
	include/sanguis/server/weapons/melee.hpp
	include/sanguis/server/weapons/modifiers/accuracy.hpp
	include/sanguis/server/weapons/modifiers/aoe.hpp
	include/sanguis/server/weapons/modifiers/apply.hpp
	include/sanguis/server/weapons/modifiers/callback.hpp
	include/sanguis/server/weapons/modifiers/container.hpp
	include/sanguis/server/weapons/modifiers/damage.hpp
	include/sanguis/server/weapons/modifiers/health.hpp
	include/sanguis/server/weapons/modifiers/magazine_size.hpp
	include/sanguis/server/weapons/modifiers/random_amount.hpp
	include/sanguis/server/weapons/modifiers/random_increase.hpp
	include/sanguis/server/weapons/modifiers/spread_radius.hpp
	include/sanguis/server/weapons/monster_spawner.hpp
	include/sanguis/server/weapons/optional_reload_time.hpp
	include/sanguis/server/weapons/optional_reload_time_fwd.hpp
	include/sanguis/server/weapons/optional_target.hpp
	include/sanguis/server/weapons/optional_target_fwd.hpp
	include/sanguis/server/weapons/pistol.hpp
	include/sanguis/server/weapons/pistol_parameters.hpp
	include/sanguis/server/weapons/pistol_parameters_fwd.hpp
	include/sanguis/server/weapons/player_start_weapon.hpp
	include/sanguis/server/weapons/random_angle.hpp
	include/sanguis/server/weapons/range.hpp
	include/sanguis/server/weapons/reload_time.hpp
	include/sanguis/server/weapons/rocket_launcher.hpp
	include/sanguis/server/weapons/rocket_launcher_parameters.hpp
	include/sanguis/server/weapons/rocket_launcher_parameters_fwd.hpp
	include/sanguis/server/weapons/sentry.hpp
	include/sanguis/server/weapons/sentry_parameters.hpp
	include/sanguis/server/weapons/sentry_parameters_fwd.hpp
	include/sanguis/server/weapons/sentry_weapon.hpp
	include/sanguis/server/weapons/shells.hpp
	include/sanguis/server/weapons/shotgun.hpp
	include/sanguis/server/weapons/shotgun_parameters.hpp
	include/sanguis/server/weapons/shotgun_parameters_fwd.hpp
	include/sanguis/server/weapons/spread_radius.hpp
	include/sanguis/server/weapons/states/backswing.hpp
	include/sanguis/server/weapons/states/backswing_fwd.hpp
	include/sanguis/server/weapons/states/castpoint.hpp
	include/sanguis/server/weapons/states/castpoint_fwd.hpp
	include/sanguis/server/weapons/states/idle.hpp
	include/sanguis/server/weapons/states/idle_fwd.hpp
	include/sanguis/server/weapons/states/reloading.hpp
	include/sanguis/server/weapons/states/reloading_fwd.hpp
	include/sanguis/server/weapons/target.hpp
	include/sanguis/server/weapons/target_fwd.hpp
	include/sanguis/server/weapons/unique_ptr.hpp
	include/sanguis/server/weapons/weapon.hpp
	include/sanguis/server/weapons/weapon_fwd.hpp
	include/sanguis/server/world/center_in_grid_pos.hpp
	include/sanguis/server/world/center_to_grid_pos.hpp
	include/sanguis/server/world/context.hpp
	include/sanguis/server/world/context_fwd.hpp
	include/sanguis/server/world/destructible_parameters.hpp
	include/sanguis/server/world/difficulty.hpp
	include/sanguis/server/world/entity_map.hpp
	include/sanguis/server/world/entity_vector.hpp
	include/sanguis/server/world/generate.hpp
	include/sanguis/server/world/grid_pos_to_center.hpp
	include/sanguis/server/world/make_destructible.hpp
	include/sanguis/server/world/make_spawner.hpp
	include/sanguis/server/world/map.hpp
	include/sanguis/server/world/object.hpp
	include/sanguis/server/world/object_fwd.hpp
	include/sanguis/server/world/object_unique_ptr.hpp
	include/sanguis/server/world/parameters.hpp
	include/sanguis/server/world/parameters_fwd.hpp
	include/sanguis/server/world/pickup_spawner.hpp
	include/sanguis/server/world/random.hpp
	include/sanguis/server/world/random_generator_name.hpp
	include/sanguis/server/world/random_seed.hpp
	include/sanguis/server/world/sight_range.hpp
	include/sanguis/server/world/sight_range_entry_set.hpp
	include/sanguis/server/world/sight_range_fwd.hpp
	include/sanguis/server/world/sight_range_map.hpp
	include/sanguis/server/world/spawn_entity.hpp
	include/sanguis/server/world/spawn_parameters.hpp
	include/sanguis/server/world/update_entity.hpp
	src/server/ai/angle_to_target.cpp
	src/server/ai/base.cpp
	src/server/ai/create_friend.cpp
	src/server/ai/create_simple.cpp
	src/server/ai/create_swarm.cpp
	src/server/ai/friend.cpp
	src/server/ai/idle.cpp
	src/server/ai/manager.cpp
	src/server/ai/move_to_target.cpp
	src/server/ai/pathing/can_walk_diagonally.cpp
	src/server/ai/pathing/find_target.cpp
	src/server/ai/pathing/is_visible.cpp
	src/server/ai/pathing/positions_are_close.cpp
	src/server/ai/rotate_and_move_to_target.cpp
	src/server/ai/rotate_to.cpp
	src/server/ai/rotate_to_target.cpp
	src/server/ai/search_new_target.cpp
	src/server/ai/simple.cpp
	src/server/ai/stop.cpp
	src/server/ai/swarm.cpp
	src/server/ai/update_interval.cpp
	src/server/auras/aoe_damage.cpp
	src/server/auras/aura.cpp
	src/server/auras/buff.cpp
	src/server/auras/collision_groups.cpp
	src/server/auras/target.cpp
	src/server/auras/target_kind_to_influence.cpp
	src/server/auras/update_sight.cpp
	src/server/auras/weapon_pickup_candidates.cpp
	src/server/buffs/buff.cpp
	src/server/buffs/burn.cpp
	src/server/buffs/comparator.cpp
	src/server/buffs/provider.cpp
	src/server/buffs/slow.cpp
	src/server/cheat/process.cpp
	src/server/cheat/weapon_type.cpp
	src/server/collision/body.cpp
	src/server/collision/body_collision.cpp
	src/server/collision/distance_entity_entity.cpp
	src/server/collision/distance_entity_pos.cpp
	src/server/collision/distance_pos_pos.cpp
	src/server/collision/ghost.cpp
	src/server/collision/ghost_base.cpp
	src/server/collision/result.cpp
	src/server/collision/with_world.cpp
	src/server/collision/with_world_move.cpp
	src/server/console.cpp
	src/server/create.cpp
	src/server/create_player.cpp
	src/server/damage/armor_list.cpp
	src/server/damage/armor_meta.cpp
	src/server/damage/fire.cpp
	src/server/damage/full.cpp
	src/server/damage/ice.cpp
	src/server/damage/list.cpp
	src/server/damage/meta.cpp
	src/server/damage/no_armor.cpp
	src/server/damage/normal.cpp
	src/server/damage/piercing.cpp
	src/server/damage/type_to_string.cpp
	src/server/damage/wrapper.cpp
	src/server/entities/auto_weak_link.cpp
	src/server/entities/base.cpp
	src/server/entities/center_ghost.cpp
	src/server/entities/center_simple.cpp
	src/server/entities/check_dim.cpp
	src/server/entities/destructible.cpp
	src/server/entities/enemies/attribute.cpp
	src/server/entities/enemies/base_difficulty.cpp
	src/server/entities/enemies/create.cpp
	src/server/entities/enemies/enemy.cpp
	src/server/entities/enemies/factory/ghost.cpp
	src/server/entities/enemies/factory/maggot.cpp
	src/server/entities/enemies/factory/make.cpp
	src/server/entities/enemies/factory/make_modifiers.cpp
	src/server/entities/enemies/factory/make_skills.cpp
	src/server/entities/enemies/factory/make_special.cpp
	src/server/entities/enemies/factory/parameters.cpp
	src/server/entities/enemies/factory/reaper.cpp
	src/server/entities/enemies/factory/skeleton.cpp
	src/server/entities/enemies/factory/spider.cpp
	src/server/entities/enemies/factory/wolf.cpp
	src/server/entities/enemies/factory/zombie00.cpp
	src/server/entities/enemies/factory/zombie01.cpp
	src/server/entities/enemies/finalize_special_parameters.cpp
	src/server/entities/enemies/make_name.cpp
	src/server/entities/enemies/modifiers/agile.cpp
	src/server/entities/enemies/modifiers/amount.cpp
	src/server/entities/enemies/modifiers/apply.cpp
	src/server/entities/enemies/modifiers/armored.cpp
	src/server/entities/enemies/modifiers/burning.cpp
	src/server/entities/enemies/modifiers/create_callbacks.cpp
	src/server/entities/enemies/modifiers/fast.cpp
	src/server/entities/enemies/modifiers/freezing.cpp
	src/server/entities/enemies/modifiers/health.cpp
	src/server/entities/enemies/modifiers/parameters.cpp
	src/server/entities/enemies/modifiers/regenerating.cpp
	src/server/entities/enemies/parameters.cpp
	src/server/entities/enemies/skills/amount.cpp
	src/server/entities/enemies/skills/factory/create_callbacks.cpp
	src/server/entities/enemies/skills/factory/parameters.cpp
	src/server/entities/enemies/skills/factory/scatter.cpp
	src/server/entities/enemies/skills/factory/teleport.cpp
	src/server/entities/enemies/skills/scatter.cpp
	src/server/entities/enemies/skills/skill.cpp
	src/server/entities/enemies/skills/teleport.cpp
	src/server/entities/enemies/special.cpp
	src/server/entities/exp_area.cpp
	src/server/entities/friend.cpp
	src/server/entities/ifaces/with_angle.cpp
	src/server/entities/ifaces/with_id.cpp
	src/server/entities/ifaces/with_links.cpp
	src/server/entities/ifaces/with_team.cpp
	src/server/entities/ifaces/with_velocity.cpp
	src/server/entities/insert_parameters.cpp
	src/server/entities/insert_parameters_center.cpp
	src/server/entities/pickups/health.cpp
	src/server/entities/pickups/monster.cpp
	src/server/entities/pickups/pickup.cpp
	src/server/entities/pickups/weapon.cpp
	src/server/entities/player.cpp
	src/server/entities/projectiles/aoe_damage.cpp
	src/server/entities/projectiles/aoe_projectile.cpp
	src/server/entities/projectiles/collision_groups.cpp
	src/server/entities/projectiles/grenade.cpp
	src/server/entities/projectiles/melee.cpp
	src/server/entities/projectiles/projectile.cpp
	src/server/entities/projectiles/rocket.cpp
	src/server/entities/projectiles/scatter.cpp
	src/server/entities/projectiles/simple_bullet.cpp
	src/server/entities/property/add.cpp
	src/server/entities/property/always_max.cpp
	src/server/entities/property/base.cpp
	src/server/entities/property/change_event.cpp
	src/server/entities/property/changeable.cpp
	src/server/entities/property/constant.cpp
	src/server/entities/property/constant_change.cpp
	src/server/entities/property/current_to_max.cpp
	src/server/entities/property/initial.cpp
	src/server/entities/property/initial_max.cpp
	src/server/entities/property/linear.cpp
	src/server/entities/property/linear_change.cpp
	src/server/entities/property/linear_decrease.cpp
	src/server/entities/property/linear_decrease_op.cpp
	src/server/entities/property/subtract.cpp
	src/server/entities/radius.cpp
	src/server/entities/spawns/limited.cpp
	src/server/entities/spawns/spawn.cpp
	src/server/entities/speed_to_abs.cpp
	src/server/entities/transfer_parameters.cpp
	src/server/entities/with_ai.cpp
	src/server/entities/with_auras.cpp
	src/server/entities/with_auras_id.cpp
	src/server/entities/with_body.cpp
	src/server/entities/with_buffs.cpp
	src/server/entities/with_ghosts.cpp
	src/server/entities/with_health.cpp
	src/server/entities/with_id.cpp
	src/server/entities/with_links.cpp
	src/server/entities/with_perks.cpp
	src/server/entities/with_velocity.cpp
	src/server/entities/with_weapon.cpp
	src/server/environment/insert_no_result.cpp
	src/server/environment/load_context.cpp
	src/server/environment/object.cpp
	src/server/events/disconnect.cpp
	src/server/events/message.cpp
	src/server/events/tick.cpp
	src/server/exp_for_level.cpp
	src/server/exp_to_net.cpp
	src/server/global/context.cpp
	src/server/global/generate_worlds.cpp
	src/server/global/load_context.cpp
	src/server/global/world_map.cpp
	src/server/level_from_exp.cpp
	src/server/load.cpp
	src/server/log.cpp
	src/server/log_location.cpp
	src/server/machine.cpp
	src/server/make_send_callback.cpp
	src/server/make_unicast_callback.cpp
	src/server/net/angle.cpp
	src/server/net/angle_policy.cpp
	src/server/net/center.cpp
	src/server/net/center_policy.cpp
	src/server/net/deserialize.cpp
	src/server/net/health.cpp
	src/server/net/health_policy.cpp
	src/server/net/serialize_to_circular_buffer.cpp
	src/server/net/serialize_to_data_buffer.cpp
	src/server/net/speed.cpp
	src/server/net/speed_policy.cpp
	src/server/net_id_from_player.cpp
	src/server/object.cpp
	src/server/object_base.cpp
	src/server/perks/choleric.cpp
	src/server/perks/create.cpp
	src/server/perks/health.cpp
	src/server/perks/ias.cpp
	src/server/perks/ims.cpp
	src/server/perks/irs.cpp
	src/server/perks/perk.cpp
	src/server/perks/tree/choosable.cpp
	src/server/perks/tree/choose.cpp
	src/server/perks/tree/create.cpp
	src/server/perks/tree/equal.cpp
	src/server/perks/tree/status.cpp
	src/server/player_id_from_args.cpp
	src/server/player_id_from_net.cpp
	src/server/send_available_perks.cpp
	src/server/states/log_location.cpp
	src/server/states/paused.cpp
	src/server/states/running.cpp
	src/server/states/unpaused.cpp
	src/server/timer.cpp
	src/server/timer_impl.cpp
	src/server/to_console_arg_list.cpp
	src/server/unknown_player_exception.cpp
	src/server/weapons/attributes/accuracy.cpp
	src/server/weapons/attributes/aoe.cpp
	src/server/weapons/attributes/damage.cpp
	src/server/weapons/attributes/magazine_size.cpp
	src/server/weapons/attributes/make_aoe.cpp
	src/server/weapons/attributes/make_damage.cpp
	src/server/weapons/attributes/spread_radius.cpp
	src/server/weapons/create.cpp
	src/server/weapons/default_ias.cpp
	src/server/weapons/default_irs.cpp
	src/server/weapons/delayed_attack.cpp
	src/server/weapons/factory/dual_pistols.cpp
	src/server/weapons/factory/grenade.cpp
	src/server/weapons/factory/parameters.cpp
	src/server/weapons/factory/pistol.cpp
	src/server/weapons/factory/primary.cpp
	src/server/weapons/factory/rocket_launcher.cpp
	src/server/weapons/factory/secondary.cpp
	src/server/weapons/factory/sentry.cpp
	src/server/weapons/factory/shotgun.cpp
	src/server/weapons/factory/visitor.cpp
	src/server/weapons/grenade.cpp
	src/server/weapons/grenade_parameters.cpp
	src/server/weapons/insert_to_attack_result.cpp
	src/server/weapons/log.cpp
	src/server/weapons/log_location.cpp
	src/server/weapons/melee.cpp
	src/server/weapons/modifiers/random_amount.cpp
	src/server/weapons/modifiers/random_increase.cpp
	src/server/weapons/monster_spawner.cpp
	src/server/weapons/pistol.cpp
	src/server/weapons/pistol_parameters.cpp
	src/server/weapons/player_start_weapon.cpp
	src/server/weapons/random_angle.cpp
	src/server/weapons/rocket_launcher.cpp
	src/server/weapons/rocket_launcher_parameters.cpp
	src/server/weapons/sentry.cpp
	src/server/weapons/sentry_parameters.cpp
	src/server/weapons/shotgun.cpp
	src/server/weapons/shotgun_parameters.cpp
	src/server/weapons/states/backswing.cpp
	src/server/weapons/states/castpoint.cpp
	src/server/weapons/states/idle.cpp
	src/server/weapons/states/reloading.cpp
	src/server/weapons/weapon.cpp
	src/server/world/center_in_grid_pos.cpp
	src/server/world/center_to_grid_pos.cpp
	src/server/world/context.cpp
	src/server/world/destructible_parameters.cpp
	src/server/world/entity_map.cpp
	src/server/world/entity_vector.cpp
	src/server/world/generate.cpp
	src/server/world/grid_pos_to_center.cpp
	src/server/world/make_destructible.cpp
	src/server/world/make_spawner.cpp
	src/server/world/object.cpp
	src/server/world/parameters.cpp
	src/server/world/pickup_spawner.cpp
	src/server/world/random.cpp
	src/server/world/random_generator_name.cpp
	src/server/world/random_seed.cpp
	src/server/world/sight_range.cpp
	src/server/world/spawn_entity.cpp
	src/server/world/spawn_parameters.cpp
	src/server/world/update_entity.cpp
)

sanguis_add_library(
	server
	"${SANGUIS_SERVER_FILES}"
	"${sanguis_common_TARGET};${sanguis_collision_TARGET};${sanguis_core_TARGET};${sanguis_creator_TARGET};${sanguis_model_TARGET};${sgecharconv_TARGET};${sgeconfig_TARGET};${sgeconsole_TARGET};${sgefont_TARGET};${sgetimer_TARGET};${alda_TARGET};${fcppt_filesystem_TARGET};${fcppt_core_TARGET};${Boost_FILESYSTEM_LIBRARIES};${ASIO_LIBS}"
)

set(
	SERVER_NAME
	sanguis_dedicated_server
)

add_executable(
	${SERVER_NAME}
	main.cpp
)

fcppt_utils_set_target_compiler_flags(
	${SERVER_NAME}
)

# TODO: Clean this up
target_link_libraries(
	${SERVER_NAME}
	PRIVATE
	${sanguis_server_TARGET}
	${alda_TARGET}
	${fcppt_core_TARGET}
)

install(
	TARGETS
	${SERVER_NAME}
	DESTINATION
	${INSTALL_BINARY_DIR}
)
